--- a/mm/Makefile
+++ b/mm/Makefile
@@ -53,3 +53,4 @@ obj-$(CONFIG_DEBUG_KMEMLEAK_TEST) += kmemleak-test.o
 obj-$(CONFIG_CLEANCACHE) += cleancache.o
 obj-$(CONFIG_ZSMALLOC)	+= zsmalloc.o
 obj-$(CONFIG_ZBUD)	+= zbud.o
+obj-$(CONFIG_ZCACHE)	+= zcache.o
