lge: Massive Reworking
* Switch driver reworked
Removed dead code, lge comments and redundant "ifdef"
Reworked printk messages
* LGE Includes
Removed dead code, lge comments and redundant "ifdef"
* Touch drivers
Reworked Kconfig and Makefile

Signed-off-by: Caio Oliveira <caiooliveirafarias0@gmail.com>

--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -55,7 +55,7 @@ obj-$(CONFIG_TOUCHSCREEN_STMPE)		+= stmpe-ts.o
 obj-$(CONFIG_TOUCHSCREEN_TI_TSCADC)	+= ti_tscadc.o
 obj-$(CONFIG_TOUCHSCREEN_TNETV107X)	+= tnetv107x-ts.o
 obj-$(CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI)	+= synaptics_i2c_rmi.o
-obj-$(CONFIG_TOUCHSCREEN_SYNAPTICS_RMI4_I2C) +=synaptics/
+obj-$(CONFIG_TOUCHSCREEN_SYNAPTICS_RMI4_I2C)	+= synaptics/
 obj-$(CONFIG_TOUCHSCREEN_TOUCHIT213)	+= touchit213.o
 obj-$(CONFIG_TOUCHSCREEN_TOUCHRIGHT)	+= touchright.o
 obj-$(CONFIG_TOUCHSCREEN_TOUCHWIN)	+= touchwin.o
@@ -74,32 +74,12 @@ obj-$(CONFIG_TOUCHSCREEN_WM97XX_MAINSTONE)	+= mainstone-wm97xx.o
 obj-$(CONFIG_TOUCHSCREEN_WM97XX_ZYLONITE)	+= zylonite-wm97xx.o
 obj-$(CONFIG_TOUCHSCREEN_W90X900)	+= w90p910_ts.o
 obj-$(CONFIG_TOUCHSCREEN_TPS6507X)	+= tps6507x-ts.o
-obj-$(CONFIG_TOUCHSCREEN_MSM_LEGACY)		+= msm_touch.o
+obj-$(CONFIG_TOUCHSCREEN_MSM_LEGACY)	+= msm_touch.o
 obj-$(CONFIG_TOUCHSCREEN_CY8C_TS)	+= cy8c_ts.o
-obj-$(CONFIG_TOUCHSCREEN_CYTTSP_I2C_QC)       += cyttsp-i2c-qc.o
-#LGE_CHANGE_S : seven.kim@lge.com kernel3.0 porting
-obj-$(CONFIG_TOUCHSCREEN_MELFAS_MMS136)	+= melfas_mms136_ts.o
-#LGE_CHANGE_E : seven.kim@lge.com kernel3.0 porting
-# LGE_CHANGES_S : download config
-obj-$(CONFIG_TOUCHSCREEN_MELFAS_MMS136) += melfas_mms136_ISC_download.o
-obj-$(CONFIG_TOUCHSCREEN_MELFAS_MMS136) += melfas_mms136_ISP_download.o
-obj-$(CONFIG_TOUCHSCREEN_MELFAS_MMS136) += melfas_mms136_tovis_bin.o
-obj-$(CONFIG_TOUCHSCREEN_MELFAS_MMS136) += melfas_mms136_lgit_bin.o
-#obj-$(CONFIG_TOUCHSCREEN_MELFAS_MMS136) += melfas_mms136_firmware_binary.o
-#2012-10-06 JongWook-Park(blood9874@lge.com) [V3] Melfas mms-128s ISC Firmware upgrade patch [START]
-# obj-$(CONFIG_TOUCHSCREEN_MELFAS_MMS128S) += mms128s_ts.o mms128s_firmware_binary.o mms128s_ISC_download.o mms128s_ISP_download.o
+obj-$(CONFIG_TOUCHSCREEN_CYTTSP_I2C_QC)	+= cyttsp-i2c-qc.o
+obj-$(CONFIG_TOUCHSCREEN_MELFAS_MMS136)	+= melfas_mms136_ts.o melfas_mms136_ISC_download.o melfas_mms136_ISP_download.o melfas_mms136_tovis_bin.o melfas_mms136_lgit_bin.o
 obj-$(CONFIG_TOUCHSCREEN_MELFAS_MMS128S) += mms128s_ts.o mms128s_firmware_binary.o mms128s_ISC_download.o mms128s_ISP_download.o MMS100S_FIRMWARE.o MMS100S_ISC_Updater_Customize.o MMS100S_ISC_Updater_V03.o
-obj-$(CONFIG_TOUCHSCREEN_MELFAS_MMS128S_V1) += mms128s_v1_ts.o mms128s_firmware_binary.o mms128s_ISC_download.o mms128s_ISP_download.o MMS100S_FIRMWARE.o MMS100S_ISC_Updater_Customize.o MMS100S_ISC_Updater_V03.o
 obj-$(CONFIG_TOUCHSCREEN_MELFAS_MMS100S) += mms100s_ts.o
-#2012-10-06 JongWook-Park(blood9874@lge.com) [V3] Melfas mms-128s ISC Firmware upgrade patch [END]
-obj-$(CONFIG_TOUCHSCREEN_MELFAS_TS)	+= melfas_ts.o mcs8000_download.o melfas_ISC_download.o 
-# obj-$(CONFIG_TOUCHSCREEN_MELFAS_TS) += melfas_ts.o mms128s_firmware_binary.o mms128s_ISC_download.o mms128s_ISP_download.o MMS100S_FIRMWARE.o MMS100S_ISC_Updater_Customize.o MMS100S_ISC_Updater_V03.o
-
-# LGE_CHANGES_E : download config
-# LGE_CHANGE_S : byungyong.hwang@lge.com Synaptics 3020 series porting
-obj-$(CONFIG_LGE_TOUCHSCREEN_SYNAPTICS_I2C_RMI4) += lge_touch_core.o
-obj-$(CONFIG_LGE_TOUCHSCREEN_SYNAPTICS_I2C_RMI4) += touch_synaptics_s7020.o
-obj-$(CONFIG_LGE_TOUCHSCREEN_SYNAPTICS_I2C_RMI4) += touch_tester.o
-obj-$(CONFIG_LGE_TOUCHSCREEN_SYNAPTICS_I2C_RMI4) += touch_synaptics_fw_upgrade.o
-# LGE_CHANGE_# : byungyong.hwang@lge.com
+obj-$(CONFIG_TOUCHSCREEN_MELFAS_TS)	+= melfas_ts.o mcs8000_download.o melfas_ISC_download.o
+obj-$(CONFIG_LGE_TOUCHSCREEN_SYNAPTICS_I2C_RMI4) += lge_touch_core.o touch_synaptics_s7020.o touch_tester.o touch_synaptics_fw_upgrade.o
 obj-$(CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4)	+= DS4/
