defconfigs: Update to latest changes
* Enable zCache again

Signed-off-by: Caio Oliveira <caiooliveirafarias0@gmail.com>

--- a/arch/arm/configs/cyanogenmod_m4_defconfig
+++ b/arch/arm/configs/cyanogenmod_m4_defconfig
@@ -1567,7 +1567,6 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_LGE_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS136 is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS128S is not set
-# CONFIG_TOUCHSCREEN_MELFAS_MMS128S_V1 is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS100S is not set
 # CONFIG_TOUCHSCREEN_MTOUCH is not set
 CONFIG_TOUCHSCREEN_MELFAS_TS=y
@@ -2881,8 +2880,7 @@ CONFIG_STAGING=y
 # CONFIG_IIO is not set
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
-# CONFIG_ZCACHE is not set
-CONFIG_QCACHE=y
+CONFIG_ZCACHE=y
 CONFIG_ZSMALLOC=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
