--- a/arch/arm/configs/cyanogenmod_vee3_defconfig
+++ b/arch/arm/configs/cyanogenmod_vee3_defconfig
@@ -1559,7 +1559,6 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_LGE_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS136 is not set
 CONFIG_TOUCHSCREEN_MELFAS_MMS128S=y
-# CONFIG_TOUCHSCREEN_MELFAS_MMS128S_V1 is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS100S is not set
 # CONFIG_TOUCHSCREEN_MTOUCH is not set
 # CONFIG_TOUCHSCREEN_MELFAS_TS is not set
@@ -2873,8 +2872,7 @@ CONFIG_STAGING=y
 # CONFIG_IIO is not set
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
-# CONFIG_ZCACHE is not set
-CONFIG_QCACHE=y
+CONFIG_ZCACHE=y
 CONFIG_ZSMALLOC=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
