--- a/arch/arm/mach-msm/lge/u0/Makefile
+++ b/arch/arm/mach-msm/lge/u0/Makefile
@@ -2,12 +2,11 @@ EXTRA_CFLAGS += -Iarch/arm/mach-msm -Iarch/arm/tools
 
 obj-$(CONFIG_MACH_MSM7X27A_U0) += board-msm7x27a_u0.o
 obj-$(CONFIG_MACH_MSM7X27A_U0) += board-msm7x27a-regulator_u0.o
-obj-$(CONFIG_MACH_MSM7X27A_U0) += board-msm7627a-bt_u0.o
 obj-$(CONFIG_MACH_MSM7X27A_U0) += board-msm7627a-camera_u0.o
 obj-$(CONFIG_MACH_MSM7X27A_U0) += board-msm7627a-display_u0.o
 obj-$(CONFIG_MACH_MSM7X27A_U0) += board-msm7627a-io_u0.o
-obj-$(CONFIG_MACH_MSM7X27A_U0) += board-msm7627a-storage_u0.o
 obj-$(CONFIG_MACH_MSM7X27A_U0) += board-msm7627a-wlan_u0.o
-
 obj-$(CONFIG_MACH_MSM7X27A_U0) += board-msm7x27a-sound_u0.o
 
+obj-$(CONFIG_MACH_MSM7X27A_U0) += ../common/board-msm7627a-bt_lge.o
+obj-$(CONFIG_MACH_MSM7X27A_U0) += ../common/board-msm7627a-storage_lge.o
