--- a/arch/arm/configs/cyanogenmod_u0_8m_defconfig
+++ b/arch/arm/configs/cyanogenmod_u0_8m_defconfig
@@ -624,7 +624,8 @@ CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_NEED_PER_CPU_KM=y
 CONFIG_CLEANCACHE=y
-CONFIG_FRONTSWAP=y
+CONFIG_USE_USER_ACCESSIBLE_TIMERS=y
+CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 # CONFIG_ARCH_MEMORY_PROBE is not set
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ARCH_POPULATES_NODE_MAP is not set
@@ -2892,7 +2893,7 @@ CONFIG_STAGING=y
 # CONFIG_IIO is not set
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
-CONFIG_ZCACHE=y
+# CONFIG_ZCACHE is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
