--- a/arch/arm/configs/cyanogenmod_m4_nonfc_defconfig
+++ b/arch/arm/configs/cyanogenmod_m4_nonfc_defconfig
@@ -29,6 +29,9 @@ CONFIG_NEED_MACH_MEMORY_H=y
 CONFIG_PHYS_OFFSET=0x00200000
 CONFIG_GENERIC_BUG=y
 # CONFIG_ARCH_RANDOM is not set
+CONFIG_GENERIC_TIME_VSYSCALL=y
+CONFIG_ARM_USE_USER_ACCESSIBLE_TIMERS=y
+CONFIG_ARM_USER_ACCESSIBLE_TIMER_BASE=0xfffef000
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -513,6 +516,8 @@ CONFIG_MSM_CPR=y
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_8X60_FUSION_GPIO_GLITCH is not set
+# CONFIG_MSM_CPU_PWRCTL is not set
+CONFIG_MSM_USE_USER_ACCESSIBLE_TIMERS=y
 # CONFIG_MINIABB_REGULATOR is not set
 
 #
