--- a/arch/arm/configs/cyanogenmod_vee3_defconfig
+++ b/arch/arm/configs/cyanogenmod_vee3_defconfig
@@ -638,8 +638,13 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_NEED_PER_CPU_KM=y
 CONFIG_CLEANCACHE=y
 CONFIG_USE_USER_ACCESSIBLE_TIMERS=y
-CONFIG_BALANCE_ANON_FILE_RECLAIM=y
+# CONFIG_ZPOOL is not set
+# CONFIG_ZBUD is not set
 CONFIG_ZSMALLOC=y
+# CONFIG_ZSMALLOC_STAT is not set
+# CONFIG_ZCACHE is not set
+CONFIG_BALANCE_ANON_FILE_RECLAIM=y
+CONFIG_PROCESS_RECLAIM=y
 # CONFIG_ARCH_MEMORY_PROBE is not set
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ARCH_POPULATES_NODE_MAP is not set
@@ -2882,7 +2887,6 @@ CONFIG_STAGING=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-# CONFIG_ZCACHE is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
