--- a/arch/arm/mach-msm/lge/vee3/Makefile
+++ b/arch/arm/mach-msm/lge/vee3/Makefile
@@ -1,12 +1,12 @@
 EXTRA_CFLAGS += -Iarch/arm/mach-msm -Iarch/arm/tools
 
-obj-$(CONFIG_MACH_MSM7X25A_V3) += board-msm7x27a_vee3.o
-obj-$(CONFIG_MACH_MSM7X25A_V3) += board-msm7x27a-regulator_vee3.o
 obj-$(CONFIG_MACH_MSM7X25A_V3) += board-msm7627a-camera_vee3.o
 obj-$(CONFIG_MACH_MSM7X25A_V3) += board-msm7627a-io_vee3.o
-obj-$(CONFIG_MACH_MSM7X25A_V3) += board-msm7627a-display_vee3.o
 
+obj-$(CONFIG_MACH_MSM7X25A_V3) += ../common/board-msm7x27a_lge.o
 obj-$(CONFIG_MACH_MSM7X25A_V3) += ../common/board-msm7627a-bt_lge.o
+obj-$(CONFIG_MACH_MSM7X25A_V3) += ../common/board-msm7627a-display_lge.o
+obj-$(CONFIG_MACH_MSM7X25A_V3) += ../common/board-msm7x27a-regulator_lge.o
 obj-$(CONFIG_MACH_MSM7X25A_V3) += ../common/board-msm7x27a-sound_lge.o
 obj-$(CONFIG_MACH_MSM7X25A_V3) += ../common/board-msm7627a-storage_lge.o
 obj-$(CONFIG_MACH_MSM7X25A_V3) += ../common/board-msm7627a-wlan_lge.o
