--- a/arch/arm/configs/cyanogenmod_vee3_defconfig
+++ b/arch/arm/configs/cyanogenmod_vee3_defconfig
@@ -117,7 +117,10 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+CONFIG_CC_OPTIMIZE_DEFAULT=y
+# CONFIG_CC_OPTIMIZE_MORE is not set
+# CONFIG_CC_OPTIMIZE_FAST is not set
 CONFIG_CCACHE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
