--- a/arch/arm/mach-msm/lge/m4/Makefile
+++ b/arch/arm/mach-msm/lge/m4/Makefile
@@ -1,7 +1,6 @@
 EXTRA_CFLAGS += -Iarch/arm/mach-msm -Iarch/arm/tools
 
 obj-$(CONFIG_MACH_MSM7X25A_M4) += board-msm7x27a_m4.o
-obj-$(CONFIG_MACH_MSM7X25A_M4) += board-msm7x27a-regulator_m4.o
 obj-$(CONFIG_MACH_MSM7X25A_M4) += board-msm7x27a-sound_m4.o
 obj-$(CONFIG_MACH_MSM7X25A_M4) += board-msm7627a-camera_m4.o
 obj-$(CONFIG_MACH_MSM7X25A_M4) += board-msm7627a-io_m4.o
@@ -9,5 +8,6 @@ obj-$(CONFIG_MACH_MSM7X25A_M4) += board-msm7627a-display_m4.o
 obj-$(CONFIG_MACH_MSM7X25A_M4) += lge_gpio_h2w.o
 
 obj-$(CONFIG_MACH_MSM7X25A_M4) += ../common/board-msm7627a-bt_lge.o
+obj-$(CONFIG_MACH_MSM7X25A_M4) += ../common/board-msm7x27a-regulator_lge.o
 obj-$(CONFIG_MACH_MSM7X25A_M4) += ../common/board-msm7627a-storage_lge.o
 obj-$(CONFIG_MACH_MSM7X25A_M4) += ../common/board-msm7627a-wlan_lge.o
