LGE: Move LGE's Makefile to Common LGE's Makefile
* this fixes build on android build:
  fatal error: error writing to -: Broken pipe
  compilation terminated.

* used ifndef to correct building, because:
 u0 use only 2 common boards
 m4 use only 4 common boards
 v1/vee3 use 7 common boards

Signed-off-by: Caio Oliveira <caiooliveirafarias0@gmail.com>

--- a/arch/arm/mach-msm/lge/Makefile.board
+++ b/arch/arm/mach-msm/lge/Makefile.board
@@ -2,6 +2,9 @@
 # Makefile for the LGE board
 #
 
+# LGE Common Model
+obj-$(CONFIG_MACH_LGE) += common/
+
 # LGE M4 Model 
 obj-$(CONFIG_MACH_MSM7X25A_M4) += m4/
 
