--- a/arch/arm/mach-msm/lge/Kconfig
+++ b/arch/arm/mach-msm/lge/Kconfig
@@ -10,102 +10,94 @@ config LGE_BOARD_HEADER_FILE
 	depends on MACH_LGE
 	default ""
 	help
-	 Specifies the board header file for particular model
-	 (Eg: board_v7.h).This config must be set
+	  Specifies the board header file for particular model
+	  (Eg: board_v7.h).This config must be set
 
 config LGE_PCB_REVISION
 	int "PCB Revision(0~11)"
 	range 0 11
-	default "1" 
+	default "1"
+	depends on MACH_LGE
 	depends on MACH_MSM8X25_V7
 	help
-	 Choose PCB Revision(see board_XX.h)
-	 0: EVB, 1: RevA, 2: RevB, 3: RevC, 4: RevD, 5: RevE,
-	 6: RevF, 7: RevG, 8: Rev1P0 9: Rev1P1 10: Rev1P2 11: Reserved
+	  Choose PCB Revision(see board_XX.h)
+	  0: EVB, 1: RevA, 2: RevB, 3: RevC, 4: RevD, 5: RevE,
+	  6: RevF, 7: RevG, 8: Rev1P0 9: Rev1P1 10: Rev1P2 11: Reserved
 
 comment "LGE Special Configs"
 
 config LGE_SILENCE_RESET
-       tristate "Support LGE Kernel Silence Reset"
-       default n
-       depends on MACH_LGE
-       depends on ANDROID_RAM_CONSOLE
-       help
-        LGE crash handler
-
-config LGE_HANDLE_PANIC
-	tristate "Support LGE Kernel Panic Handler"
-	default n 
+	tristate "Support LGE Kernel Silence Reset"
 	depends on MACH_LGE
 	depends on ANDROID_RAM_CONSOLE
 	help
-	 LGE crash handler
+	  LGE crash handler
+
+config LGE_HANDLE_PANIC
+	tristate "Support LGE Kernel Panic Handler"
+	depends on MACH_LGE
+	depends on ANDROID_RAM_CONSOLE
+	help
+	  LGE crash handler
 
 config LGE_LAST_SYSFS_FILE_INFO
-        depends on MACH_LGE
-        default n
-        bool "Last Sysfs info"
-        help
-	 Provides last sysfs file accessed info
+	depends on MACH_LGE
+	bool "Last Sysfs info"
+	help
+	  Provides last sysfs file accessed info
 
 config LGE_REPORT_RMT_STORAGE_CLIENT_READY
-       bool "Report that RMT_STORAGE_CLIENT is ready to modem"
-       depends on MACH_LGE
-       default n
-       help
-	 Report that Remote storage client is ready to modem.
-	 After this signal modem can call efs_sync().
+	bool "Report that RMT_STORAGE_CLIENT is ready to modem"
+	depends on MACH_LGE
+	help
+	  Report that Remote storage client is ready to modem.
+	  After this signal modem can call efs_sync().
 
 config LGE_PROC_COMM
 	bool "LGE added proc comm"
-	default y
+	depends on MACH_LGE
 	help
-	 LGE added proc_comm
+	  LGE added proc_comm
 
 config LGE_BOOT_MODE
 	bool "LGE boot mode"
 	depends on MACH_LGE
-	default n
 	help
-	 This feature shows boot mode to userspace through sysfs
+	  This feature shows boot mode to userspace through sysfs
 
 config LGE_BLOCKING_MONITOR
 	bool "LGE Blocking Monitor"
 	depends on MACH_LGE
-	default n
 	help
-	 This feature shows call stack when the function call is blocked
-	 for predefined time
+	  This feature shows call stack when the function call is blocked
+	  for predefined time
 
 config LGE_HW_REVISION
 	bool "LGE PCB Revision"
-	default y
+	depends on MACH_LGE
 	help
-	 Detects LGE Board PCB Revision
+	  Detects LGE Board PCB Revision
 
 config LGE_PM_BATT_ID_DETECTION
-       bool "Detects Battery Id from modem"
-       default n
-       help
-	 Detects Battery ID from modem(See lge_pm.h for battery id types)
+	bool "Detects Battery Id from modem"
+	depends on MACH_LGE
+	help
+	  Detects Battery ID from modem(See lge_pm.h for battery id types)
 
 config LGE_LCD_ESD_DETECTION
 	bool "Enable to reset LCD on ESD detection"
 	depends on MACH_LGE
-	default n
 	help
-	 This enables ESD detection of LCD & resets LCD if ESD shock occurs.
+	  This enables ESD detection of LCD & resets LCD if ESD shock occurs.
 
 config LGE_UART_MODE
 	bool "Support LGE UART ENABLE DISABLE"
-	default n
 	depends on SERIAL_MSM_CONSOLE
 	help
-	 UART ENABLE DISABLE HANDLING
+	  UART ENABLE DISABLE HANDLING
 
 config LGE_BDI_TIMER_BUG_PATCH
 	bool "LGE bdi timer bug patch"
-	default n 
 	depends on MACH_LGE
 	help
 	  This patch is added for preventing from kernel panic which is
@@ -118,70 +110,84 @@ config LGE_BDI_TIMER_BUG_PATCH
 	  which has been deleted already. In that case, 
 	  "del_timer(&wb->wakeup_timer)" code can generate kernel panic.
 	  So, I add the codes which checks whether bdi is unregitered or not 
-	  before removing timer.                
+	  before removing timer.
 
 config LGE_WAIT_FOR_EFS_SYNC_COMPLETE
 	bool "Wait in power off/reset until SYNC complete"
 	depends on MACH_LGE
-	default n
 	help
-	 This patch waits in power down/ reset handler if any efs sync is going on.
-	 Turn Off phone only when currently active sync complete.This makes sure that
-	 modem file system is proper.
+	  This patch waits in power down/ reset handler if any efs sync is going on.
+	  Turn Off phone only when currently active sync complete.This makes sure that
+	  modem file system is proper.
 
 config LGE_BATTERY_SUSPEND_RESUME
-	depends on MACH_LGE
 	bool "Battery Supend Resume"
+	depends on MACH_LGE
 	help
-	 Support for the LG Electronics Power.
+	  Support for the LG Electronics Power.
 
 config LGE_POWER_ON_STATUS_PATCH
 	bool "Report power on satus of handset"
 	depends on MACH_LGE
-	default n
 	help
-	 This patch is added to read the power on status from modem and update
-	 the same in apps processor's /proc/sys/kernel/boot_reason file.
-	 Ref: Documentation/arcr/arm/msm/boot.txt
+	  This patch is added to read the power on status from modem and update
+	  the same in apps processor's /proc/sys/kernel/boot_reason file.
+	  Ref: Documentation/arcr/arm/msm/boot.txt
 
 config LGE_TOUCH_FOUR_BUTTON_SUPPORT
 	bool "Dual Sim model support 4 button"
 	depends on MACH_LGE
-	default n
 
 config LGE_TOUCH_POWER_USING_PMIC
 	bool "Touch 3.0V power from PMIC LDO1"
 	depends on MACH_LGE
-	default n
 
 config LGE_REBOOT_REASON_IN_EMMC
 	bool "Reboot reason in emmc"
 	depends on MACH_LGE
-	default n
 	help
 	  Stores reboot reason in emmc
 
 config LGE_DETECT_USB_CABLE_TYPE
 	bool "Check the type of usb cable is connected to Handset"
 	depends on MACH_LGE
-	default n
 	help
 	  Check the type of usb cable is connected to handset, like Factory USB or UART, normal
 	  charger and unknown cable.
 
+config LGE_SUPPORT_RAPI
+	bool "LGE Remote communcation api support"
+	depends on MACH_LGE
+	depends on MACH_MSM7X27A_U0
+	help
+	  LGE Remote communcation api support
+
+config LGE_EMMC_DIRECT_ACCESS
+	bool "LGE eMMC direct access driver"
+	depends on MACH_LGE
+	depends on MACH_MSM7X27A_U0
+	help
+	  LGE eMMC direct access driver
+
 config MACH_LGE_NO_DEBUG_INFO
 	depends on MACH_LGE
-	default n
 	bool "MSM7x27A U0 DEBUG Option"
 	help
-	 Support for the LG Electronics MSM7x27A U0.
+	  Support for the LG Electronics MSM7x27A U0.
 
 config MACH_LGE_2ND_GEN_KK_WORKAROUD
 	depends on MACH_LGE
 	bool "MSM7x25A V3 errors Workaround"
-	default n
 	help
-	 Disable support for "Copy splash image to kernel memory" and KeyLED.
-	 The 2nd gen devices not have this support in bootloader.
-	 And KeyLED make screen On forever.
+	  Disable support for "Copy splash image to kernel memory" and KeyLED.
+	  The 2nd gen devices not have this support in bootloader.
+	  And KeyLED make screen On forever.
+
+config MINIABB_REGULATOR
+	tristate "MINIABB Voltage Regulator"
+	depends on MACH_LGE
+	depends on MACH_MSM7X25A_V1
+	help
+	  Enable regulator framework support for regulators managed by MINIABB
+	  on the modem, and controlled through proccomm calls.
 endmenu
