drivers: staging: Add volan wlan driver
Change-Id: I09a147154f878e0ec184e1dee956aeb5a8c23fe0

--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -128,4 +128,6 @@ source "drivers/staging/ozwpan/Kconfig"
 
 source "drivers/staging/prima_legacy/Kconfig"
 
+source "drivers/staging/volans/Kconfig"
+
 endif # STAGING
