defconfig: Enable volans wlan
Change-Id: Ic8274fac93d2ed17179edbe1658102be263aff03

--- a/arch/arm/configs/cyanogenmod_u0_nonfc_defconfig
+++ b/arch/arm/configs/cyanogenmod_u0_nonfc_defconfig
@@ -2931,6 +2931,11 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_PRIMA_WLAN_LEGACY is not set
 
 #
+# Qualcomm Atheros volans WLAN module
+#
+CONFIG_VOLANS_WLAN=m
+
+#
 # Qualcomm MSM specific device drivers
 #
 # CONFIG_MSM_SSBI is not set
