volans: Fix module building under Android Tree
* parameters pickup from commit https://github.com/CyanogenMod/android_kernel_htc_msm8994/commit/4aaf6be34f8cf9d807372a82ff1721eef23f432c

Signed-off-by: Caio Oliveira <caiooliveirafarias0@gmail.com>

--- a/drivers/staging/volans/Kconfig
+++ b/drivers/staging/volans/Kconfig
@@ -1,9 +1,9 @@
-comment "Qualcomm Atheros volans WLAN module"
+comment "Qualcomm Atheros Volans WLAN module"
 config VOLANS_WLAN
-	tristate "Qualcomm Atheros volans WLAN module"
+	tristate "Qualcomm Atheros Volans WLAN module"
 	default n
 	help
-	Add support for the Qualcomm Atheros volans WLAN module
+	Add support for the Qualcomm Atheros Volans WLAN module
 
 #	depends on WLAN
 #	depends on CFG80211
