configs: Add all cpufreq governators
Signed-off-by: Caio Oliveira <caiooliveirafarias0@gmail.com>

--- a/arch/arm/configs/cyanogenmod_m4_defconfig
+++ b/arch/arm/configs/cyanogenmod_m4_defconfig
@@ -692,14 +692,34 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSH3 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ASSWAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_HYPER is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
+CONFIG_CPU_FREQ_GOV_ASSWAX=y
+CONFIG_CPU_FREQ_GOV_BADASS=y
+CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
+CONFIG_CPU_FREQ_GOV_HYPER=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
+CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -2934,7 +2954,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_PRIMA_WLAN_LEGACY is not set
 
 #
-# Qualcomm Atheros volans WLAN module
+# Qualcomm Atheros Volans WLAN module
 #
 CONFIG_VOLANS_WLAN=m
 
