--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -353,6 +353,15 @@ config LEDS_MSM_PMIC
           (Power Management IC) chip on Qualcomm reference boards,
           for example SURF and FFAs.
 
+config LEDS_MSM_PMIC_E0
+        tristate "LED Support for Qualcomm PMIC connected LEDs (E0 variant)"
+        default n
+        depends on ARCH_MSM
+        help
+          This option enables support for LEDs connected over PMIC
+          (Power Management IC) chip on Qualcomm reference boards,
+          for example SURF and FFAs. (E0 variant)
+
 config LEDS_PMIC8058
 	tristate "LED Support for Qualcomm PMIC8058"
 	default n
