HACK: more fixes

--- a/arch/arm/mach-msm/lge/e0/Makefile
+++ b/arch/arm/mach-msm/lge/e0/Makefile
@@ -1,4 +1,4 @@
 EXTRA_CFLAGS += -Iarch/arm/mach-msm -Iarch/arm/tools
 
 obj-$(CONFIG_MACH_MSM7X25A_E0EU) += board-input/
-
+obj-$(CONFIG_MACH_MSM7X25A_E0EU) += board-msm7627a-io_e0.o
